[package]
authors = ['Anonymous']
edition = '2018'
homepage = 'https://shadows.link/'
name = 'shadows-runtime'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-wasm-builder]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '4.0.0'



[dependencies]

codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }

frame-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', optional = true, branch = 'rococo-v1', version = '3.0.0' }
frame-executive = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' ,version = '3.0.0' }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' ,version = '3.0.0' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' ,version = '3.0.0' }
frame-system-benchmarking = { optional = true, default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' ,version = '3.0.0' }
frame-system-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' ,version = '3.0.0' }
hex-literal = { optional = true, version = '0.3.1' }
pallet-balances = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' ,version = '3.0.0' }

pallet-randomness-collective-flip = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' ,version = '3.0.0' }
pallet-sudo = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' ,version = '3.0.0' }
pallet-timestamp = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' ,version = '3.0.0' }
pallet-transaction-payment = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' ,version = '3.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' ,version = '3.0.0' }
serde = { features = ['derive'], optional = true, version = '1.0.119' }
sp-api = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' ,version = '3.0.0' }
sp-block-builder = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' ,version = '3.0.0' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' ,version = '3.0.0' }
sp-inherents = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' ,version = '3.0.0' }
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' ,version = '3.0.0' }
sp-offchain = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' ,version = '3.0.0' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' ,version = '3.0.0' }
sp-session = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' ,version = '3.0.0' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' ,version = '3.0.0' }
sp-transaction-pool = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' ,version = '3.0.0' }
sp-version = { default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' ,version = '3.0.0' }


parachain-info = { git = 'https://github.com/paritytech/cumulus.git', default-features = false, branch = 'rococo-v1', version = '0.1.0' }
cumulus-pallet-parachain-system= { git = 'https://github.com/paritytech/cumulus.git', default-features = false, branch = 'rococo-v1'}
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1",default-features = false}
cumulus-pallet-xcm-handler =  { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1",default-features = false}
polkadot-parachain = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
xcm = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
xcm-builder = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
xcm-executor = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }


pallet-aura = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-grandpa = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-consensus-aura = { version = "0.9.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

fp-rpc = { default-features = false, path = "../primitives/rpc" }
pallet-ethereum = { version = "0.1.0", default-features = false, path = "../frame/ethereum" }
pallet-evm = { version = "3.0.0", default-features = false, path = "../frame/evm" }
pallet-evm-precompile-simple = { version = "3.0.0", default-features = false, path = "../frame/evm/precompile/simple" }
pallet-evm-precompile-sha3fips = { version = "3.0.0", default-features = false, path = "../frame/evm/precompile/sha3fips" }

substrate-wasm-builder = {version = '4.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'rococo-v1' }
getrandom = { version = "0.2", features = ["js"], optional = true }

[features]
default = ['std']
aura = []
manual-seal = []
runtime-benchmarks = [
	'sp-runtime/runtime-benchmarks',
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'hex-literal',
	'frame-system/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
]
std = [
	"codec/std",
	"serde",

	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"fp-rpc/std",

	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-sha3fips/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",

	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",


	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"parachain-info/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-primitives-core/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"cumulus-pallet-xcm-handler/std",


]
