[package]
name = "fc-rpc-core"
version = "0.1.0"
edition = "2018"
[dependencies]
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "14.0.3"
jsonrpc-derive = "14.0.3"
jsonrpc-pubsub = "15.0.0"
rustc-hex = "2.1.0"
ethereum-types = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"], optional = true }