[package]
name = "module-mintx"
version = "0.0.1"
authors = ["Shadow Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
orml-tokens = { path = "../../orml/tokens", default-features = false }
orml-utilities = { path = "../../orml/utilities", default-features = false }
debt-engine = { package = "module-debt-engine", path = "../debt_engine", default-features = false }
lend = { package = "module-lend", path = "../lend", default-features = false }
support = { package = "module-support", path = "../support", default-features = false }
primitives = { package = "shadows-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
sp-io = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
pallet-balances = { version = "2.0.0", default-features = false }
orml-currencies = { path = "../../orml/currencies", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }
cdp-treasury = { package = "module-cdp-treasury", path = "../cdp_treasury", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"orml-tokens/std",
	"orml-utilities/std",
	"lend/std",
	"debt-engine/std",
	"support/std",
	"primitives/std",
]
