[package]
name = "runtime-common"
version = "0.0.1"
authors = ["Shadows Developers"]
edition = "2020"

[dependencies]
module-support = { path = "../../modules/support", default-features = false }
orml-oracle = { path = "../../orml/oracle", default-features = false }
primitives = { package = "shadows-primitives", path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"module-support/std",
	"orml-oracle/std",
	"primitives/std",
]
