[package]
name = "shadows-node"
repository = "https://github.com/paritytech/substrate/"
homepage = 'https://shadows.link/'
version = "0.0.1"
authors = ["Shadows Network"]
edition = "2018"
license = "Unlicense"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3.8"
parking_lot = "0.10.0"
jsonrpc-core = "14.0.3"

sp-api = { version = "2.0.0-dev", git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master#9b5a9cb9" }
sc-cli = {  git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sc-executor = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sc-service = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sp-core = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sc-telemetry = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sc-keystore =  { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sp-inherents = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sc-transaction-pool = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sp-transaction-pool = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sc-consensus-aura = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sp-consensus-aura = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sp-consensus = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sc-consensus = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sc-finality-grandpa = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sp-finality-grandpa = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sc-client-api = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sp-runtime = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }

# These dependencies are used for the node template's RPCs

sc-rpc = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sc-rpc-api = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sp-blockchain = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sp-block-builder = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sc-basic-authorship = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
substrate-frame-rpc-system = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
pallet-transaction-payment-rpc = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }


shadows-runtime = { path = "../runtime", default-features = false, features = ["std"] }
frontier-rpc = { version = "0.1.0", path = "../../rpc" }
frontier-rpc-primitives = { version = "0.1.0", path = "../../rpc/primitives" }


[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }

[features]
default = ["aura"]
aura = [
	"shadows-runtime/aura",
]

manual-seal = [
	"shadows-runtime/manual-seal"
]