[package]
name = "shadows-runtime"
version = "0.0.1"
authors = ["Anonymous"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }

aura = { version = "2.0.0-dev", default-features = false, package = "pallet-aura", git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master"}
balances = { version = "2.0.0-dev", default-features = false, package = "pallet-balances", git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
frame-support = { version = "2.0.0-dev", default-features = false, git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
grandpa = { version = "2.0.0-dev", default-features = false, package = "pallet-grandpa", git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
randomness-collective-flip = { version = "2.0.0-dev", default-features = false, package = "pallet-randomness-collective-flip", git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sudo = { version = "2.0.0-dev", default-features = false, package = "pallet-sudo", git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
system = { version = "2.0.0-dev", default-features = false, package = "frame-system", git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
timestamp = { version = "2.0.0-dev", default-features = false, package = "pallet-timestamp", git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
transaction-payment = { version = "2.0.0-dev", default-features = false, package = "pallet-transaction-payment", git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
ethereum = { version = "0.1.0", default-features = false, package = "pallet-ethereum", path = "../../frame/ethereum" }
evm = { version = "2.0.0-dev", default-features = false, package = "pallet-evm", git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
frame-executive = { version = "2.0.0-dev", default-features = false, git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { version = "2.0.0-dev", default-features = false, git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sp-block-builder = {  default-features = false, version = "2.0.0-dev", git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master"}
sp-consensus-aura = { version = "0.8.0-dev", default-features = false, git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sp-core = { version = "2.0.0-dev", default-features = false, git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sp-inherents = {  default-features = false, version = "2.0.0-dev", git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master"}
sp-io = { version = "2.0.0-dev", default-features = false, git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sp-offchain = { version = "2.0.0-dev", default-features = false, git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sp-runtime = { version = "2.0.0-dev", default-features = false, git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sp-session = { version = "2.0.0-dev", default-features = false, git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master"}
sp-std = { version = "2.0.0-dev", default-features = false, git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sp-transaction-pool = { version = "2.0.0-dev", default-features = false, git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
sp-version = { version = "2.0.0-dev", default-features = false, git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
frame-system-rpc-runtime-api = { version = "2.0.0-dev", default-features = false, git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0-dev", default-features = false, git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }
frontier-rpc-primitives = { default-features = false, path = "../../rpc/primitives" }

[build-dependencies]
wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner", git = "https://github.com/jinfeixibi990910/substrate.git", branch= "master" }


[features]
default = ["std"]
std = [
	"aura/std",
	"balances/std",
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"grandpa/std",
	"randomness-collective-flip/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sudo/std",
	"system/std",
	"timestamp/std",
	"transaction-payment/std",
	"ethereum/std",
	"evm/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"frontier-rpc-primitives/std",
]

