[package]
name = "shadows-rpc-core-txpool"
version = '0.1.0'
authors = ['ShadowsNetwork']
edition = '2018'
homepage = 'https://shadows.network'
license = 'GPL-3.0-only'
repository = 'https://github.com/ShadowsNetwork/shadows/'

[dependencies]
ethereum = { git = "https://github.com/rust-blockchain/ethereum", branch = "master", features = ["with-codec"] }
ethereum-types = "0.10.0"
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "14.0.3"
jsonrpc-derive = "14.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

fc-rpc-core = { git = "https://github.com/shadowsnetwork/frontier", branch = "v0.5-hotfixes" }
