[package]
name = "pallet-evm-precompile-ed25519"
version = "3.0.0"
edition = "2018"
license = "Apache-2.0"
[dependencies]
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
sp-io = { version = "3.0.0", default-features = false, git = "https://github.com/ShadowsNetwork/substrate.git", branch = "frontier" }
fp-evm = { version = "0.8.0", default-features = false, path = "../../../../primitives/evm" }
evm = { version = "0.25.0", default-features = false, features = ["with-codec"] }
ed25519-dalek = { version = "1.0.0", features = ["alloc", "u64_backend"], default-features = false }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"fp-evm/std",
	"evm/std",
	"ed25519-dalek/std",
]
