[package]
name = "pallet-evm-precompile-sha3fips"
version = "3.0.0"
edition = "2018"
license = "Apache-2.0"
[dependencies]
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-io = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
fp-evm = { version = "0.8.0", default-features = false, path = "../../../../primitives/evm" }
evm = { version = "0.26.0", default-features = false, features = ["with-codec"] }
tiny-keccak = { version = "2.0", features = ["fips202"] }
getrandom = { version = "0.2", features = ["js"], optional = true }
[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"fp-evm/std",
	"evm/std",
]
