[package]
name = "pallet-evm-precompile-simple"
version = "3.0.0"
edition = "2018"
license = "Apache-2.0"
[dependencies]
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
sp-io = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "rococo-v1" }
fp-evm = { version = "0.8.0", default-features = false, path = "../../../../primitives/evm" }
evm = { version = "0.25.0", default-features = false, features = ["with-codec"] }
ripemd160 = { version = "0.9", default-features = false }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"fp-evm/std",
	"evm/std",
	"ripemd160/std",
]
